<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tiyu</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登陆</string>
    <string name="quit">退出</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_hot_list">Hot_list</string>
    <string name="title_activity_zc_list">ZC_list</string>
    <string name="title_activity_og_list">OG_list</string>
    <string name="title_activity_nba_list">NBA_list</string>
    <string name="title_activity_cba_list">CBA_list</string>
    <string name="title_activity_frag1">Frag1</string>
    <string name="OG">奥运会</string>
    <string name="ZC">中超</string>
    <string name="HOT">热门</string>
    <string name="NBA">NBA</string>
    <string name="CBA">CBA</string>
    <string name="menu">menu</string>
    <string name="quick">评论</string>
    <string name="yj">反馈意见</string>
    <string name="gx">版本更新</string>
    <string name="gy">关于软件</string>
    <string name="tj">提交</string>
    <string name="qx">取消</string>
    <string name="vs">VS</string>
    <string name="bi">:</string>

</resources>