<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="120dp"
    android:gravity="center_horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/yj_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/yj_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/more_feedbackflag" />

            <TextView
                android:id="@+id/yj_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="18dp"
                android:text="@string/yj"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gx_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="25dp" >

            <ImageView
                android:id="@+id/gx_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/more_checkupdateflag" />

            <TextView
                android:id="@+id/gx_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="18dp"
                android:text="@string/gx"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gy_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="25dp" >

            <ImageView
                android:id="@+id/gy_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/more_aboutuserflag" />

            <TextView
                android:id="@+id/gy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="18dp"
                android:text="@string/gy"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>